Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54370

Qt3DWindow: setFormat is set too late

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.1
    • 5.7.0
    • Qt3D
    • None
    • b656d9c426fb36220538d656b99d01f1ea161824, dc51c6e005d285c71923f0a346ac8d0fa9837184

    Description

      The Qt3DRender::QRenderAspect is created before setFormat(). This causes the QOpenGLContext to be created in Renderer::initialize() (renderer.cpp line 350) before setFormat() is called, and so the context is created with the default surface format. The default format is version 2.0, NoProfile and samples=-1.

      Creating the QRenderAspect after calling setFormat() in qt3dwindow.cpp fixes this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            harald Harald Vistnes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes